--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carloitaben",
   "type": "module",
-  "version": "0.0.1",
+  "packageManager": "pnpm@9.5.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
