--- a/package.json
+++ b/package.json
@@ -6,11 +6,25 @@
     "dev": "astro dev",
     "build": "astro build",
     "start": "astro preview",
+    "check": "astro check",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^3.1.2",
-    "astro": "^2.4.3",
-    "tailwindcss": "^3.3.2"
+    "@astrojs/check": "^0.8.1",
+    "astro": "^4.11.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3"
+  },
+  "prettier": {
+    "semi": false,
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   }
 }
